--- a/patterns.html
+++ b/patterns.html
@@ -17,6 +17,8 @@
             <li><a href="#contact">Contact</a></li>
             <li><a href="patterns.html">Patterns</a></li>
             <li><a href="shop.html">Shop</a></li>
+            <li><a href="#" class="carticon"><i class="fa fa-shopping-cart fa-fw"></i><span class="badge">0</span></a>
+            </li>
           </ul>
           <div class="burger">
             <i class="fa fa-bars"></i>
