--- a/shop.html
+++ b/shop.html
@@ -17,7 +17,8 @@
           <li><a href="patterns.html">Contact Us</a></li>
           <li><a href="#contact">Patterns</a></li>
           <li><a href="shop.html">Shop</a></li>
-          <li><a href="#" class="carticon"><i class="fa fa-shopping-cart fa-fw"></i><span class="badge">0</span></a></li>
+          <li><a href="#" class="carticon"><i class="fa fa-shopping-cart fa-fw"></i><span class="badge">0</span></a>
+          </li>
         </ul>
         <div class="burger">
           <i class="fa fa-bars"></i>
