--- a/patterns.html
+++ b/patterns.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Crochet Fashion</title>
+    <title>Patterns | Crochet Fashion</title>
     <script src="https://use.fontawesome.com/d8f94f37e4.js"></script>
     <link href="css/styles.css" rel="stylesheet">
   </head>
